# ai-sessions

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
ai_sessions/: api.py  cli.py  config.py  sessions.py
ai_sessions/providers/: __init__.py  base.py  claude.py  codex.py  opencode.py
scripts/: debug_codex.py  dump-codex.ts
sessions/: 805bb027-b473-4289-8a06-8b4d069233b1.json
src/: cli.ts  config.ts  fsutil.ts  settings.ts  version.ts
src/ai-sessions/: finalize.ts  fork.ts  naming.ts  resolve.ts  store.ts  summarize.ts  types.ts  watch.ts
src/api/: openapi.ts  server.ts
src/channels/: index.ts  remote-control.ts  session-watcher.ts  stt.ts  telegram-api.ts  telegram-download.ts  telegram-format.ts  telegram-status.ts  telegram-utils.ts  telegram.ts  types.ts
src/crons/: scheduler.ts  store.ts  types.ts
src/db/: index.ts  migrations.ts
src/hooks/: README.md  dispatch.ts  ingest.ts  store.ts
src/jobs/: prompt-section.ts  store.ts  types.ts  worker.ts
src/logs/: buffer.ts
src/providers/: claude.ts  codex-rpc.ts  codex.ts  defaults.ts  env-sanitize.ts  glm.ts  index.ts  opencode.ts  types.ts
src/resume/: detect.ts  poller.ts  state.ts
src/runs/: bus.ts  drain.ts  inject.ts  registry.ts  start.ts  types.ts
src/sessions/: content.ts  dotenv.ts  jsonl.ts  preview.ts
src/skills/: catalog.ts  commands.ts
src/stats/: index.ts
src/sub-agent-tasks/: scheduler.ts  store.ts  types.ts
src/sub-agents/: prompt-section.ts  runner.ts  store.ts  types.ts
src/turns/: registry.ts
(+24 files in other folders)
